Fix tab buttons not showing in portrait

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -337,12 +337,28 @@ header > p {
 
 #side > nav {
 	position: absolute;
-	bottom: 0;
-	left: -100%;
-	width: 100%;
 	display: flex;
-	flex-flow: column;
 	align-items: flex-end;
+}
+
+@media (orientation: landscape) {
+	#side > nav {
+		bottom: 0;
+		left: -100%;
+		width: 100%;
+		flex-flow: column;
+	}
+}
+
+@media (orientation: portrait) {
+	#side > nav {
+		left: 0;
+		top: -100%;
+		width: 100%;
+		height: 100%;
+		flex-flow: row;
+		justify-content: flex-end;
+	}
 }
 
 #side > nav > button {
